--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* font */
+@font-face {
+	font-family: "Vazir";
+	src: url("/font/Vazir-Light-FD-WOL.woff2") format("woff2");
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Vazir";
+	src: url("/font/Vazir-Medium-FD-WOL.woff2") format("woff2");
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Vazir";
+	src: url("/font/Vazir-Bold-FD-WOL.woff2") format("woff2");
+	font-weight: 700;
+	font-style: normal;
+}
+
+* {
+	font-family: "Vazir", sans-serif;
+	background-color: ;
+}
